--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,16 @@
+# Nom de l'application
 spring.application.name=reservationVoiture
+
+# Port Railway
+server.port=${PORT:8080}
+
+# PostgreSQL Railway
+spring.datasource.url=jdbc:postgresql://tramway.proxy.rlwy.net:56263/railway
+spring.datasource.username=postgres
+spring.datasource.password=SbMMLLZEMPJKxajiJPFWNNniuAyBAnLw
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# Hibernate
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
