--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,23 @@
 # Nom de l'application
 spring.application.name=reservationVoiture
 
-# Port Railway
-server.port=${PORT:8080}
+# Local development settings
+server.port=8085
 
-# PostgreSQL Railway
-spring.datasource.url=jdbc:postgresql://tramway.proxy.rlwy.net:56263/railway
+# PostgreSQL local
+spring.datasource.url=jdbc:postgresql://localhost:5432/reservation_voiture
 spring.datasource.username=postgres
-spring.datasource.password=SbMMLLZEMPJKxajiJPFWNNniuAyBAnLw
+spring.datasource.password=1234
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-# Hibernate
+# Hibernate (local)
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+# External reservations API (returns JSON list of reservations with hotel name)
+external.api.reservations.url=http://localhost:8081/reservations
+#api/reservation/list
+# JSP view resolver
+spring.mvc.view.prefix=/WEB-INF/jsp/
+spring.mvc.view.suffix=.jsp
