--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,7 +16,7 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 # External reservations API (returns JSON list of reservations with hotel name)
-external.api.reservations.url=http://localhost:8081/reservations
+external.api.reservations.url=http://localhost:8080/test/api/reservation/list
 #api/reservation/list
 # JSP view resolver
 spring.mvc.view.prefix=/WEB-INF/jsp/
