--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,8 +11,13 @@ spring.datasource.password=1234
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # Hibernate (local)
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+# spring.jpa.hibernate.ddl-auto=update
+# spring.jpa.show-sql=true
+
+# Hibernate (local) - DISABLED FOR TESTING
+#spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 # External reservations API (returns JSON list of reservations with hotel name)
